--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,10 @@
+repositories {
+    mavenCentral()
+}
+
 apply plugin: 'java'
+
+dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.6'
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+}
