--- a/build.gradle
+++ b/build.gradle
@@ -7,4 +7,6 @@ apply plugin: 'java'
 dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.6'
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
+
+    //compile 'org.javatuples:javatuples:1.2'
 }
