--- a/build.gradle
+++ b/build.gradle
@@ -9,5 +9,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
 
     compile 'commons-io:commons-io:2.6'
-    //compile 'org.javatuples:javatuples:1.2'
+    compile 'org.apache.commons:commons-lang3:3.8.1'
+
+    compile 'com.google.guava:guava:27.0.1-jre'
 }
