--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,6 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.8.1'
 
     compile 'com.google.guava:guava:27.0.1-jre'
+
+    compile 'org.apache.commons:commons-math3:3.2'
 }
